--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>lambdaj</artifactId>
       <version>2.3.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
